--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
         "monolog/monolog": "~1.22",
         "guzzlehttp/guzzle": "^6.1"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.6"
+    },
     "license": "MIT",
     "authors": [
         {
